Refine formatting of website to look clearner, more closely resemble the example image, and prevent overflow using inline-flex and min-height 100%.

--- a/style.css
+++ b/style.css
@@ -10,27 +10,31 @@ body {
     display: flex;
     height: 42px;
     justify-content: space-between;
+    align-items: center;
     background-color: #1F2937;
     color: #f9faf8;
-    padding: 10px 30px;
+    padding: 10px 20%;
+    margin-bottom: 20px;
 }
 
 li {
     display: flex;
     flex-direction: row;
     list-style: none;
-    padding: 0px 10px;
+    padding-left: 10px;
 }
 
 .headerlogo {
     display: flex;
-    
+    font-size: 24px;
+    font-weight: bolder;
 }
 
 .headerlinks {
     display: flex;
     flex-direction: row;
-    margin: 0;
+    font-size: 18px;
+    color: #f9faf8;
 }
 
 a {
@@ -39,19 +43,32 @@ a {
 }
 
 .main {
-    display: flex;
-    height: 200px;
+    display: inline-flex;
     background-color: #1F2937;
     color: #f9faf8;
-    padding: 0px 30px 20px;
-    margin-top: -20px;
+    margin: -20px 0px;
+    padding: 80px 20% 80px;
+    min-height: 100%;
     justify-content: space-between;
     align-items: center;
+}
+
+.main-header {
+    font-size: 48px;
+    font-weight: 900;
+    color: #f9faf8;
+}
+
+.main-info {
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
 .info-header {
     display: flex;
     justify-content: center;
+    font-weight: bolder;
+    padding: 50px 0px 0px;
 }
 
 .main-left {
@@ -60,26 +77,44 @@ a {
     justify-content: center;
 }
 
+.main-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: bold;
+    background-color: #3882f6;
+    width: 120px;
+    padding: 6px 0px;
+    margin: 10px 0px;
+    border-radius: 4px;
+    border: 0;
+}
+
 .main-right {
     display: flex;
-    padding: 100px;
+    background-color: gray;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 180px;
+    margin-left: 24px;
 }
 
 .info {
-    display: flex;
-    height: 300px;
+    display: inline-flex;
+    min-height: 100%;
     flex-direction: column;
     justify-content: center;
     align-content: space-evenly;
-    padding: 0px 200px;
+    padding: 0px 20%;
 }
 
 .gray {
-    display: flex;
-    height: 200px;
+    display: inline-flex;
+    min-height: 100%;
     background-color: lightgray;
     align-items: center;
-    padding: 100px 10%;
+    padding: 100px 20%;
 }
 
 .words {
@@ -98,25 +133,41 @@ a {
 .button {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    padding: 20px 30px;
+    justify-content: space-between;
+    padding: 40px 100px;
+    background-color: #3882f6;
+    margin: 80px 20%;
+    border-radius: 8px;
 }
 
 .button-text {
     display: flex;
     flex-direction: column;
+    color: white;
 }
 
 .button-button {
     display: flex;
     margin: 10px;
+    padding: 8px 40px;
+    border: 2px solid;
+    justify-content: center;
+    align-items: center;
+    background-color: #3882f6;
+    color: white;
+    border-color: white;
+    border-radius: 6px;
+    font-weight: bold;
 }
 
 .footer {
     display: flex;
     height: 72px;
     justify-content: center;
+    align-items: center;
     padding: 0px 30px;
+    color: white;
+    background-color: #1F2937;
 }
 
 .info-header {
@@ -149,7 +200,7 @@ a {
 .card {
     display: flex;
     box-sizing: border-box;
-    border: 2px solid blue;
+    border: 4px solid #3882f6;
     height: 20px;
     width: 20px;
     padding: 48px;
@@ -161,4 +212,9 @@ a {
     display: flex;
     padding: 0px 10px;
     text-align: center;
+}
+
+.button-text-header {
+    font-weight: bold;
+    font-size: larger;
 }
